Import of SREZIC/savevars-0.05 from CPAN.
gitpan-cpan-distribution: savevars
gitpan-cpan-version:      0.05
gitpan-cpan-path:         SREZIC/savevars-0.05.tar.gz
gitpan-cpan-author:       SREZIC
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension savevars.
 
+0.05  2000-10-10
+	- returned value of cfgfile() is cached, so the same cfgfile is used
+          even if $< is changed during the script
+        - CAVEATS and BUGS sections in POD
+
 0.04  1999-09-07
 	- documented functions
 	- new: dont_write_cfgfile
