Import of SREZIC/savevars-0.07 from CPAN.
gitpan-cpan-distribution: savevars
gitpan-cpan-version:      0.07
gitpan-cpan-path:         SREZIC/savevars-0.07.tar.gz
gitpan-cpan-author:       SREZIC
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -15,5 +15,5 @@ Installation as usual:
 NOTE: The test program writes and deletes a configuration file names
 .savevarstestrc in your home directory.
 
-Comments to: Slaven Rezic <eserte@cs.tu-berlin.de>
+Comments to: Slaven Rezic <slaven.rezic@berlin.de>
 
