--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension savevars.
 
+0.07
+	- warning fix
+
 0.06  2001-10-11
 	- new section NOTES in POD
 	- Fixed bug in writecfg. Now writecfg() can be called multiple
